argo-rollout-bluegreen/blue-green-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-active
spec:
  selector:
    app: blue-green-deployment
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-preview
spec:
  selector:
    app: blue-green-deployment
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
